--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:137193838260:ios:dbbf31d04e3b5921ea69e1",
-  "FIREBASE_PROJECT_ID": "chat-room---flutter",
-  "GCM_SENDER_ID": "137193838260"
+  "GOOGLE_APP_ID": "1:1073769483106:ios:94c93e755923d1fc4b7a3b",
+  "FIREBASE_PROJECT_ID": "secret-chat-bcd7f",
+  "GCM_SENDER_ID": "1073769483106"
 }
